JCRSITE-54: Update standalone-server documentation
Mention recent Jackrabbit standalone and Java version
Recommend to deny illegal reflective access when starting server

git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/site/trunk@1910707 13f79535-47bb-0310-9956-ffa450edef68